--- a/style.css
+++ b/style.css
@@ -3,3 +3,59 @@
   padding: 0;
   box-sizing: border-box;
 }
+.container{
+    width: 100%;
+    height: 100vh;
+    background: linear-gradient(45deg, skyblue, white);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.container h1{
+    font-family: 'Poppins', sans-serif;
+    color: black;
+    font-size: 3rem;
+    font-weight: 600;
+    text-align: center;
+    margin-bottom: 20px;
+    margin-top: 20px;
+    text-shadow: 0 10px 20px rgba(0, 0, 0, 0.304);
+}
+.container input{
+    height: 40px;
+    width: 300px;
+    border: 2px solid black;
+    outline: none;
+    border-radius: 10px;
+    padding: 0 10px;
+    font-size: 1.2rem;
+    font-weight: 500;
+    background: #fff;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.304);
+    margin-bottom: 30px;
+}
+.container .search{
+    width: 100px;
+    height: 40px;
+    background: linear-gradient(45deg, skyblue, rgb(69, 72, 215));
+    border: 2px solid black;
+    outline: none;
+    border-radius: 10px;
+    padding: 0 10px;
+    font-size: 1.2rem;
+    font-weight: 500;
+    color: white;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.304);
+    cursor: pointer;
+    transition: 0.5s;
+}
+.container .search:active{
+    transform: scale(0.95);
+}
+.container .weather{
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    padding: 20px;
+}
