--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 .container{
     width: 100%;
-    height: 100vh;
+    height: 100%;
     background: linear-gradient(45deg, skyblue, white);
     display: flex;
     flex-direction: column;
