--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 .container{
     width: 100%;
-    height: 100%;
+    height: 100vh;
     background: linear-gradient(45deg, skyblue, white);
     display: flex;
     flex-direction: column;
@@ -102,6 +102,9 @@
     }
 }
 @media (max-width: 673px) {
+    .container{
+        height: 100%;
+    }
     .container .weather{
         grid-template-columns: 1fr;
         grid-template-rows: 1fr 1fr 1fr;
